# tkmviewer

./: .gitignore  .gnu_style.cfg  CHANGELOG  README.md  meson.build  ro.fxdata.taskmonitor.viewer.json
data/: meson.build  ro.fxdata.taskmonitor.viewer.appdata.xml.in  ro.fxdata.taskmonitor.viewer.desktop.in  ro.fxdata.taskmonitor.viewer.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  tkmv-application.c  tkmv-application.h  tkmv-preferences-window.c  tkmv-preferences-window.h  tkmv-types.h  tkmv-types.h.in  tkmv-window.c  tkmv-window.h  tkmviewer-application.c  tkmviewer-application.h  tkmviewer-window.c  tkmviewer-window.h  tkmviewer.gresource.xml
src/gtk/: help-overlay.ui  tkmv-dashboard-view.ui  tkmv-preferences-window.ui  tkmv-processes-view.ui  tkmv-systeminfo-view.ui  tkmv-window.ui  tkmviewer-window.ui
src/libkplot/: array.c  border.c  bucket.c  buffer.c  colours.c  compat.h  draw.c  extern.h  grid.c  hist.c  kdata.c  kplot.c  kplot.h  label.c  margin.c  mean.c  meson.build  plotctx.c  reallocarray.c  stddev.c  tic.c  vector.c
src/libtkm/: meson.build  tkm-action.c  tkm-action.h  tkm-buddyinfo-entry.c  tkm-buddyinfo-entry.h  tkm-context.c  tkm-context.h  tkm-cpustat-entry.c  tkm-cpustat-entry.h  tkm-ctxinfo-entry.c  tkm-ctxinfo-entry.h  tkm-diskstat-entry.c  tkm-diskstat-entry.h  tkm-entrypool.c  tkm-entrypool.h  tkm-meminfo-entry.c  tkm-meminfo-entry.h  tkm-pressure-entry.c  tkm-pressure-entry.h  tkm-procacct-entry.c  tkm-procacct-entry.h  tkm-procevent-entry.c  tkm-procevent-entry.h  tkm-procinfo-entry.c  tkm-procinfo-entry.h  tkm-session-entry.c  tkm-session-entry.h  tkm-settings.c  tkm-settings.h  tkm-task.c  tkm-task.h  tkm-taskpool.c  tkm-taskpool.h  tkm-types.h  tkm-wireless-entry.c  tkm-wireless-entry.h
src/model/: tkmv-settings-recent-file.c  tkmv-settings-recent-file.h  tkmv-settings.c  tkmv-settings.h
src/views/: tkmv-dashboard-view.c  tkmv-dashboard-view.h  tkmv-processes-view.c  tkmv-processes-view.h  tkmv-systeminfo-view.c  tkmv-systeminfo-view.h
src/views/dashboard-webview/: index.html  script.js  style.css
src/webext/: meson.build  tkmv-webext.c
